--- a/src/templates/add_operator_form.html
+++ b/src/templates/add_operator_form.html
@@ -31,7 +31,7 @@
     </div>
 </form>
 <script>
-    const base_url = 'http://185.189.14.105/';
+    const base_url = 'http://185.189.14.105';
     const url = base_url + '/operators/';
     window.onload = async function () {
         let form = document.getElementById("add_form");
