--- a/src/templates/add_operator_form.html
+++ b/src/templates/add_operator_form.html
@@ -20,7 +20,7 @@
                         <input type="name" placeholder="Имя" name="first_name">
                         <input type="patronymic_last" placeholder="Отчество" name="patronymic">
                         <button type="submit" class="add_button"> + Добавить</button>
-                        <button onclick="location.href='http://localhost:8000/'" type="button" class=back_button>
+                        <button onclick="location.href='http://185.189.14.105/'" type="button" class=back_button>
                             Назад
                         </button>
 
