--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -24,7 +24,7 @@
     <div class="search">
         <input type="search" placeholder="Поиск">
         <button class="search_button"> Найти</button>
-        <button onclick="location.href='http://185.189.14.105/admins/{{admin_id}}/add_operator'" class="add_button"
+        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_operator'" class="add_button"
                 type="button"> +
             Добавить
         </button>
