--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -25,7 +25,7 @@
 </form>
 <script>
 
-    const url_root = 'http://185.189.14.105/';
+    const url_root = '{{base_url}}';
 
     function add_to_cookie(json) {
         document.cookie = "access_token=" + json.access_token + '; max-age=900';
