--- a/src/templates/admin-securities.html
+++ b/src/templates/admin-securities.html
@@ -5,29 +5,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ url_for('static', path='/admin.css') }}" rel="stylesheet">
-    <title>Операторы</title>
+    <title>Охранники</title>
 </head>
 
 <body>
 
 <div class="grid-container">
 
-    <div class="sidebar">
-        <a class="active" href="./admin_opers.html">
-            <img src="./triangle.png" class="triangle"></img>Операторы</a>
-        <a href="./admin_secs.html">
-            <img src="./triangle.png" class="triangle"></img>Охранники</a>
+    <div class="sidebar" tabindex="0">
+        <a href="{{base_url}}/admins/{{admin_id}}">
+            <img src="./triangle.png" class="triangle">Операторы</a>
+        <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">
+            <img src="./triangle.png" class="triangle">Охранники</a>
         <a href="./admin_dics.html">
-            <img src="./triangle.png" class="triangle"></img>Словари</a>
+            <img src="./triangle.png" class="triangle">Словари</a>
     </div>
 
     <div class="search">
         <input type="search" placeholder="Поиск">
         <button class="search_button"> Найти</button>
-        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_operator'" class="add_button"
-                type="button"> +
-            Добавить
-        </button>
+        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_security'" type="button" class="add_button"> +
+        Добавить</button>
     </div>
 
     <div class="pagination">
@@ -40,65 +38,107 @@
         <table id="table">
             <tr>
                 <th>ФИО</th>
+                <th>Организация</th>
+                <th>Должность</th>
             </tr>
             <tr>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
-            </tr>
-            <tr>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
         </table>
