--- a/src/templates/admin-securities.html
+++ b/src/templates/admin-securities.html
@@ -14,11 +14,11 @@
 
     <div class="sidebar" tabindex="0">
         <a href="{{base_url}}/admins/{{admin_id}}">
-            <img src="./triangle.png" class="triangle">Операторы</a>
+            <img src="{{url_for('static', path='/triangle.png')}}" class="triangle"></img>Операторы</a>
         <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">
-            <img src="./triangle.png" class="triangle">Охранники</a>
+            <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Охранники</a>
         <a href="./admin_dics.html">
-            <img src="./triangle.png" class="triangle">Словари</a>
+            <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Словари</a>
     </div>
 
     <div class="search">
