--- a/src/templates/admin-securities-waiting.html
+++ b/src/templates/admin-securities-waiting.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{url_for('static', path='/admin.css')}}" rel="stylesheet">
-    <title>Операторы</title>
+    <link href="{{url_for('static', path='/admin.css') }}" rel="stylesheet">
+    <title>Охранники</title>
 </head>
 
 <body>
@@ -13,14 +13,14 @@
 <div class="grid-container">
 
     <div class="topbar">
-        <a class="active" href="{{base_url}}/admins/{{admin_id}}/operators">Зарегистрированные</a>
-        <a href="{{base_url}}/admins/{{admin_id}}/operators?pending=True">В ожидании регистриации</a>
+        <a href="{{base_url}}/admins/{{admin_id}}/securities">Зарегистрированные</a>
+        <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities?pending=True">В ожидании регистриации</a>
     </div>
 
     <div class="sidebar">
-        <a class="active" href="{{base_url}}/admins/{{admin_id}}">
+        <a href="{{base_url}}/admins/{{admin_id}}">
             <img src="{{url_for('static', path='/triangle.png')}}" class="triangle"></img>Операторы</a>
-        <a href="{{base_url}}/admins/{{admin_id}}/securities">
+        <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">
             <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Охранники</a>
         <a href="./admin_dics.html">
             <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Словари</a>
@@ -31,10 +31,7 @@
             <input type="search" placeholder="Поиск">
         </label>
         <button class="search_button"> Найти</button>
-        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_operator'" class="add_button"
-                type="button"> +
-            Добавить
-        </button>
+        <button class="add_button"> + Добавить</button>
     </div>
 
     <div class="pagination">
@@ -47,12 +44,20 @@
         <table id="table">
             <tr>
                 <th>ФИО</th>
+                <th>Должность</th>
+                <th>Ссылка</th>
+                <th></th>
             </tr>
-            {%for operator in operators%}
             <tr>
-                <td>{{operator.last_name}} {{operator.first_name}} {{operator.patronymic}}</td>
+                <td>Кек</td>
+                <td>ООО"Кек"</td>
+                <td>
+                    <button class="copy_button">Скопировать</button>
+                </td>
+                <td>
+                    <button class="delete_button">Удалить</button>
+                </td>
             </tr>
-            {%endfor%}
         </table>
     </div>
 
