--- a/src/templates/admin-securities.html
+++ b/src/templates/admin-securities.html
@@ -12,6 +12,11 @@
 
 <div class="grid-container">
 
+    <div class="topbar">
+        <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">Зарегистрированные</a>
+        <a href="{{base_url}}/admins/{{admin_id}}/securities?pending=True">В ожидании регистриации</a>
+    </div>
+
     <div class="sidebar" tabindex="0">
         <a href="{{base_url}}/admins/{{admin_id}}">
             <img src="{{url_for('static', path='/triangle.png')}}" class="triangle"></img>Операторы</a>
@@ -22,10 +27,14 @@
     </div>
 
     <div class="search">
-        <input type="search" placeholder="Поиск">
+        <label>
+            <input type="search" placeholder="Поиск">
+        </label>
         <button class="search_button"> Найти</button>
-        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_security'" type="button" class="add_button"> +
-        Добавить</button>
+        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_security'" type="button"
+                class="add_button"> +
+            Добавить
+        </button>
     </div>
 
     <div class="pagination">
@@ -38,109 +47,14 @@
         <table id="table">
             <tr>
                 <th>ФИО</th>
-                <th>Организация</th>
                 <th>Должность</th>
             </tr>
+            {%for security in securities%}
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>{{security.last_name}} {{security.first_name}} {{security.patronymic}}</td>
+                <td>{{security.position}}</td>
             </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+            {% endfor %}
         </table>
     </div>
 
