--- a/src/templates/admin-operators-waiting.html
+++ b/src/templates/admin-operators-waiting.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+<script>
+    base_url = "{{base_url}}"
+</script>
+
+{% block javascript %}
+<script src="{{ url_for('static',path='/copy_url_to_clipboard.js') }}"></script>
+<script src="{{ url_for('static',path='/delete_user_to_register.js') }}"></script>
+{% endblock %}
 
 <div class="grid-container">
 
@@ -50,15 +58,18 @@
                 <th>Ссылка</th>
                 <th></th>
             </tr>
+            {%for operator in operators%}
             <tr>
-                <td>Kek</td>
+                <td>{{operator.last_name}} {{operator.first_name}} {{operator.patronymic}}</td>
                 <td>
-                    <button class="copy_button">Скопировать</button>
+                    <button onclick="copyUrlToClipboard('{{operator.uuid}}')" class="copy_button">Скопировать</button>
                 </td>
                 <td>
-                    <button class="delete_button">Удалить</button>
+                    <button onclick="delete_user_to_register('{{operator.uuid}}')" class="delete_button">Удалить
+                    </button>
                 </td>
             </tr>
+            {%endfor%}
         </table>
     </div>
 
