--- a/src/templates/admin-securities-waiting.html
+++ b/src/templates/admin-securities-waiting.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
+<script>
+    base_url = '{{base_url}}';
+</script>
 
+{% block javascript %}
+<script src="{{ url_for('static',path='/copy_url_to_clipboard.js') }}"></script>
+<script src="{{ url_for('static',path='/delete_user_to_register.js') }}"></script>
+{% endblock %}
 <div class="grid-container">
 
     <div class="topbar">
@@ -31,7 +38,10 @@
             <input type="search" placeholder="Поиск">
         </label>
         <button class="search_button"> Найти</button>
-        <button class="add_button"> + Добавить</button>
+        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_security'" type="button"
+                class="add_button"> +
+            Добавить
+        </button>
     </div>
 
     <div class="pagination">
@@ -48,16 +58,22 @@
                 <th>Ссылка</th>
                 <th></th>
             </tr>
+
+            {%for security in securities%}
             <tr>
-                <td>Кек</td>
-                <td>ООО"Кек"</td>
+                <td>{{security.last_name}} {{security.first_name}} {{security.patronymic}}</td>
+                <td>{{security.position}}</td>
                 <td>
-                    <button class="copy_button">Скопировать</button>
+                    <button id="copy" onclick="copyUrlToClipboard('{{security.uuid}}')" class="copy_button">Скопировать
+                    </button>
                 </td>
                 <td>
-                    <button class="delete_button">Удалить</button>
+                    <button onclick="delete_user_to_register('{{security.uuid}}')" class="delete_button">Удалить
+                    </button>
                 </td>
             </tr>
+            {%endfor%}
+
         </table>
     </div>
 
