added pagination support

--- a/src/templates/admin-securities.html
+++ b/src/templates/admin-securities.html
@@ -38,9 +38,15 @@
     </div>
 
     <div class="pagination">
-        <a href="#">&laquo;</a>
-        <a href="#">1</a>
-        <a href="#">&raquo;</a>
+        {% if pagination.has_prev_page %}
+            <a href="{{base_url}}/admins/{{admin_id}}/securities?page={{pagination.prev_page}}">{{pagination.prev_page}}</a>
+        {%endif%}
+        {%if pagination.has_prev_page or pagination.has_next_page%}
+            <a href="{{base_url}}/admins/{{admin_id}}/securities?page={{pagination.current_page}}">{{pagination.current_page}}</a>
+        {%endif%}
+        {%if pagination.has_next_page%}
+            <a href="{{base_url}}/admins/{{admin_id}}/securities?page={{pagination.next_page}}">{{pagination.next_page}}</a>
+        {% endif%}
     </div>
 
     <div class="table-wr">
