--- a/src/templates/admin-operators.html
+++ b/src/templates/admin-operators.html
@@ -27,10 +27,12 @@
     </div>
 
     <div class="search">
-        <label>
-            <input type="search" placeholder="Поиск">
-        </label>
-        <button class="search_button"> Найти</button>
+        <form method="get" action="{{base_url}}/admins/{{admin_id}}/operators">
+            <label>
+                <input type="search" placeholder="Поиск" name="substring">
+            </label>
+            <button class="search_button"> Найти</button>
+        </form>
         <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_operator'" class="add_button"
                 type="button"> +
             Добавить
