--- a/src/static/admin.css
+++ b/src/static/admin.css
@@ -1,191 +1,210 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap");
+
 html, body {
-  height: 100%;
-  padding: 0;
-  margin: 0; }
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 body {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 18% auto;
-  grid-template-rows: 150px 60px 60px auto;
-  grid-column-gap: 2%;
+    display: grid;
+    grid-template-columns: 18% 290px auto;
+    grid-template-rows: 150px 60px 60px auto;
+    grid-column-gap: 2%;
 }
 
 .sidebar {
-  grid-column: 1;
-  grid-row: 2/5;
-  font-size: 20px;
+    grid-column: 1;
+    grid-row: 2/5;
+    font-size: 20px;
 }
 
 .sidebar a {
-  display: block;
-  color: #3D8AFF;
-  padding: 20px;
-  text-decoration: none;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+    display: block;
+    color: #3D8AFF;
+    padding: 20px;
+    text-decoration: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .sidebar a.active {
-  background-color: #f1f1f1;
-  color: black;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+    background-color: #f1f1f1;
+    color: black;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .sidebar a:hover:not(.active) {
-  background-color: #f1f1f1;
-  color: black;
+    background-color: #f1f1f1;
+    color: black;
 }
 
 .topbar {
-  grid-column: 2;
-  grid-row: 1;
-  font-size: 16px;
-  align-self: center;
+    grid-column: 2/4;
+    grid-row: 1;
+    font-size: 16px;
+    align-self: center;
 }
 
 .topbar a {
-  color: #3D8AFF;
-  padding: 15px;
-  text-decoration: none;
-  border-radius: 10px;
+    color: #3D8AFF;
+    padding: 15px;
+    text-decoration: none;
+    border-radius: 10px;
 }
 
 .topbar a.active {
-  background-color: #f1f1f1;
-  color: black;
-  border-radius: 10px;
+    background-color: #f1f1f1;
+    color: black;
+    border-radius: 10px;
 }
 
 .topbar a:hover:not(.active) {
-  background-color: #f1f1f1;
-  color: black;
+    background-color: #f1f1f1;
+    color: black;
 }
 
 .triangle {
-  margin-left:40%;
-  margin-right:7%;
-  width: 10px;
-  height: 15px;
+    margin-left: 40%;
+    margin-right: 7%;
+    width: 10px;
+    height: 15px;
 }
 
 .search {
-  grid-column: 2;
-  grid-row: 2;
-  align-self: center;
+    grid-column: 2;
+    grid-row: 2;
+    align-self: center;
 }
 
 input[type="search"] {
-  width: 200px;
-  height: 40px;
-  border-radius: 5px;
-  outline: 0;
-  -moz-outline-style: none; }
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    outline: 0;
+    -moz-outline-style: none;
+}
 
 input[type="search"] {
-  border: 1px solid #ccc;
-  padding: 0 0 0 10px;
-  font-size: 14px; }
+    border: 1px solid #ccc;
+    padding: 0 0 0 10px;
+    font-size: 14px;
+}
 
 .search_button {
-  width: 80px;
-  height: 40px;
-  margin-left: 5px;
-  border-radius: 5px;
-  background: #8497FF;
-  border: none;
-  color: white;
-  font-size: 14px;
-  font-weight: 100;
-  cursor: pointer;
-  transition: box-shadow .4s ease; }
+    width: 80px;
+    height: 40px;
+    margin-left: 5px;
+    border-radius: 5px;
+    background: #8497FF;
+    border: none;
+    color: white;
+    font-size: 14px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
+
+.add_wr {
+    grid-column: 3;
+    grid-row: 2;
+    align-self: center;
+}
 
 .add_button {
-  width: 120px;
-  height: 40px;
-  margin-left: 20px;
-  border-radius: 5px;
-  background: #60B963;
-  border: none;
-  color: white;
-  font-size: 14px;
-  font-weight: 100;
-  cursor: pointer;
-  transition: box-shadow .4s ease; }
+    width: 120px;
+    height: 40px;
+    border-radius: 5px;
+    background: #60B963;
+    border: none;
+    color: white;
+    font-size: 14px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
 
 .pagination {
-  grid-column: 2;
-  grid-row: 3;
-  align-self: center;
+    grid-column: 2;
+    grid-row: 3;
+    align-self: center;
 }
 
 .pagination a {
-  color: #3D8AFF;
-  float: left;
-  padding: 10px 16px;
-  border-radius: 5px;
+    color: #3D8AFF;
+    float: left;
+    padding: 10px 16px;
+    border-radius: 5px;
 }
 
-.pagination a:hover:not(.active) {background-color: #f1f1f1;}
+.pagination a:hover:not(.active) {
+    background-color: #f1f1f1;
+}
 
 .table-wr {
-  grid-column: 2;
-  grid-row: 4;
-  font-size: 14px;
-  padding-top: 20px;
-  padding-bottom: 40px;
+    grid-column: 2/4;
+    grid-row: 4;
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 
 #table {
-  border:1px solid #7B7B7B;
-  border-radius: 5px;
-  width: 85%;
+    border: 1px solid #7B7B7B;
+    border-radius: 5px;
+    width: 85%;
 }
 
 #table th {
-  border: 1px solid #ffffff;
-  padding: 8px;
+    border: 1px solid #ffffff;
+    padding: 8px;
 }
 
 #table td {
-  font-size: 12px;
-  border: 1px solid #ffffff;
-  padding: 5px;
+    font-size: 12px;
+    border: 1px solid #ffffff;
+    padding: 5px;
 }
 
-#table tr:nth-child(even){background-color: #f2f2f2;}
+#table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
 
-#table tr:hover {background-color: #ddd;}
+#table tr:hover {
+    background-color: #ddd;
+}
 
 #table th {
-  text-align: left;
-  background-color: #DEDEDE;
-  color: #454545;
+    text-align: left;
+    background-color: #DEDEDE;
+    color: #454545;
 }
 
 .copy_button {
-  height: 20px;
-  border-radius: 5px;
-  border: 1px solid #8497FF;
-  background: none;
-  color: #8497FF;
-  font-size: 12px;
-  font-weight: 100;
-  cursor: pointer;
-  transition: box-shadow .4s ease; }
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid #8497FF;
+    background: none;
+    color: #8497FF;
+    font-size: 12px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
 
 .delete_button {
-  height: 20px;
-  border-radius: 5px;
-  border: 1px solid #E45D65;
-  background: none;
-  color: #E45D65;
-  font-size: 12px;
-  font-weight: 100;
-  cursor: pointer;
-  transition: box-shadow .4s ease; }
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid #E45D65;
+    background: none;
+    color: #E45D65;
+    font-size: 12px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
