--- a/src/templates/add_operator_form.html
+++ b/src/templates/add_operator_form.html
@@ -8,7 +8,7 @@
     <title>Добавление оператора</title>
     {% block javascript %}
     <script src="{{ url_for('static',path='/copy_url_to_clipboard.js') }}"></script>
-    {%endblock%}}
+    {%endblock%}
 </head>
 
 <body>
