--- a/src/templates/admin-securities-waiting.html
+++ b/src/templates/admin-securities-waiting.html
@@ -24,14 +24,8 @@
         <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities?pending=True">В ожидании регистриации</a>
     </div>
 
-    <div class="sidebar">
-        <a href="{{base_url}}/admins/{{admin_id}}">
-            <img src="{{url_for('static', path='/triangle.png')}}" class="triangle"></img>Операторы</a>
-        <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">
-            <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Охранники</a>
-        <a href="./admin_dics.html">
-            <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Словари</a>
-    </div>
+    {%import 'nav-macros.html' as nav with context %}
+    {{nav.nav(2)}}
 
     <div class="search">
         <form method="get" action="{{base_url}}/admins/{{admin_id}}/securities">
@@ -41,6 +35,9 @@
             <input type="hidden" name="pending" value="True">
             <button class="search_button"> Найти</button>
         </form>
+    </div>
+
+    <div class="add_wr">
         <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_security'" type="button"
                 class="add_button"> +
             Добавить
@@ -49,16 +46,15 @@
 
     <div class="pagination">
         {% if pagination.has_prev_page %}
-        <a href="{{base_url}}/admins/{{admin_id}}/securities?pending=True&page={{pagination.prev_page}}">{{pagination
-            .prev_page}}</a>
+        <a href="{{base_url}}/admins/{{admin_id}}/securities?pending=True&page={{pagination.prev_page}}">&laquo;</a>
         {%endif%}
-        {%if pagination.has_prev_page or pagination.has_next_page%}
+
         <a href="{{base_url}}/admins/{{admin_id}}/securities?pending=True&page={{pagination.current_page}}">{{pagination
             .current_page}}</a>
-        {%endif%}
+
         {%if pagination.has_next_page%}
         <a href="{{base_url}}/admins/{{admin_id}}/securities?pending=True&page={{pagination.next_page}}">
-            {{pagination.next_page}}</a>
+            &raquo;</a>
         {% endif%}
     </div>
 
