--- a/src/templates/nav-macros.html
+++ b/src/templates/nav-macros.html
@@ -15,10 +15,10 @@
         <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Охранники</a>
     {%endif%}
     {%if number_of_selected == 3%}
-    <a class="active" href="{{base_url}}/admins/{{admin_id}}/catalogs">
+    <a class="active" href="{{base_url}}/admins/catalogs">
         <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Словари</a>
     {%else%}
-    <a href="{{base_url}}/admins/{{admin_id}}/catalogs">
+    <a href="{{base_url}}/admins/catalogs">
         <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Словари</a>
     {%endif%}
 </div>
