--- a/src/templates/add_security_form.html
+++ b/src/templates/add_security_form.html
@@ -8,7 +8,7 @@
     <title>Добавление охранника</title>
     {% block javascript %}
         <script src="{{ url_for('static',path='/copy_url_to_clipboard.js') }}"></script>
-    {%endblock%}}
+    {%endblock%}
 </head>
 
 <body>
@@ -41,7 +41,7 @@
         </div>
     </div>
     <script>
-
+        base_url = '{{base_url}}'
         const url = base_url + '/securities/';
         window.onload = async function () {
             let form = document.getElementById("add_form");
