--- a/src/templates/admin-securities.html
+++ b/src/templates/admin-securities.html
@@ -13,15 +13,15 @@
 <div class="grid-container">
 
     <div class="topbar">
-        <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">Зарегистрированные</a>
-        <a href="{{base_url}}/admins/{{admin_id}}/securities?pending=True">В ожидании регистриации</a>
+        <a class="active" href="{{base_url}}/admins/securities">Зарегистрированные</a>
+        <a href="{{base_url}}/admins/securities?pending=True">В ожидании регистриации</a>
     </div>
 
     {%import 'nav-macros.html' as nav with context %}
     {{nav.nav(2)}}
 
     <div class="search">
-        <form method="get" action="{{base_url}}/admins/{{admin_id}}/securities">
+        <form method="get" action="{{base_url}}/admins/securities">
             <label>
                 <input type="search" placeholder="Поиск" name="substring">
             </label>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="add_wr">
-        <button onclick="location.href='{{base_url}}/admins/{{admin_id}}/add_security'" type="button"
+        <button onclick="location.href='{{base_url}}/admins/add_security'" type="button"
                 class="add_button"> +
             Добавить
         </button>
@@ -38,13 +38,13 @@
 
     <div class="pagination">
         {% if pagination.has_prev_page %}
-        <a href="{{base_url}}/admins/{{admin_id}}/securities?page={{pagination.prev_page}}">&laquo;</a>
+        <a href="{{base_url}}/admins/securities?page={{pagination.prev_page}}">&laquo;</a>
         {%endif%}
 
-        <a href="{{base_url}}/admins/{{admin_id}}/securities?page={{pagination.current_page}}">{{pagination.current_page}}</a>
+        <a href="{{base_url}}/admins/securities?page={{pagination.current_page}}">{{pagination.current_page}}</a>
 
         {%if pagination.has_next_page%}
-        <a href="{{base_url}}/admins/{{admin_id}}/securities?page={{pagination.next_page}}">&raquo;</a>
+        <a href="{{base_url}}/admins/securities?page={{pagination.next_page}}">&raquo;</a>
         {% endif%}
     </div>
 
