--- a/src/templates/nav-macros.html
+++ b/src/templates/nav-macros.html
@@ -1,17 +1,17 @@
 {% macro nav(number_of_selected) -%}
 <div class="sidebar">
     {%if number_of_selected == 1%}
-    <a class="active" href="{{base_url}}/admins/{{admin_id}}">
+    <a class="active" href="{{base_url}}/admins">
         <img src="{{url_for('static', path='/triangle.png')}}" class="triangle"></img>Операторы</a>
     {%else%}
-    <a href="{{base_url}}/admins/{{admin_id}}">
+    <a href="{{base_url}}/admins">
         <img src="{{url_for('static', path='/triangle.png')}}" class="triangle"></img>Операторы</a>
     {%endif%}
     {%if number_of_selected == 2%}
-    <a class="active" href="{{base_url}}/admins/{{admin_id}}/securities">
+    <a class="active" href="{{base_url}}/admins/securities">
         <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Охранники</a>
     {%else%}
-    <a href="{{base_url}}/admins/{{admin_id}}/securities">
+    <a href="{{base_url}}/admins/securities">
         <img src="{{url_for('static', path='/triangle.png') }}" class="triangle"></img>Охранники</a>
     {%endif%}
     {%if number_of_selected == 3%}
