added documents adding function

--- a/src/templates/operator.html
+++ b/src/templates/operator.html
@@ -5,13 +5,6 @@
     <title>Оператор</title>
 </head>
 <body>
-<h1>Здесь будет страница оператора, которую Макар скоро сделает</h1>
-<h1>Кстати, вот данные этого оператора</h1>
-<h1>Имя - {{operator.first_name}}</h1>
-<h1>Фамилия - {{operator.last_name}}</h1>
-<h1>Отчество - {{operator.patronymic}}</h1>
-<h1>Имя пользователя - {{operator.username}}</h1>
-<h1>Пароль хранится в бд вот так))) - {{operator.password_hash}}</h1>
-
+<h1>Здесь будет страница оператора</h1>
 </body>
 </html>
