--- a/src/static/add_form.css
+++ b/src/static/add_form.css
@@ -39,7 +39,7 @@ body {
     position: relative;
     margin: 0 auto;
     background: #f5f5f5;
-    max-width: 450px;
+    max-width: 350px;
     border-radius: 10px;
     padding: 20px;
 }
@@ -52,13 +52,39 @@ body {
     color: #414141;
 }
 
+#add_form h3 {
+    text-align: left;
+    padding-left: 40px;
+    margin-top: 10px;
+    font-weight: 500;
+    font-size: 1.2em;
+    color: #414141;
+}
+
+#add_form p {
+    text-align: left;
+    padding-left: 40px;
+    color: #414141;
+}
+
+.example {
+    text-align: left;
+    padding-left: 40px;
+    margin-bottom: 10px;
+    color: #ABABAB;
+    font-size: 12px;
+}
+
 #add_form .form {
     padding-top: 20px;
     text-align: center;
 }
 
 #add_form input[type="text"],
-input[type="number"] {
+input[type="number"],
+input[type="tel"],
+input[type="email"],
+select {
     width: 80%;
     margin-bottom: 20px;
     height: 40px;
@@ -68,11 +94,45 @@ input[type="number"] {
 }
 
 #add_form input[type="text"],
-input[type="number"] {
+input[type="number"],
+input[type="tel"],
+input[type="email"] {
     border: 1px solid #ccc;
     padding: 0 0 0 10px;
     text-transform: capitalize;
     font-size: 14px;
+}
+
+#add_form select {
+    border: 1px solid #ccc;
+    padding: 0 0 0 10px;
+    font-size: 14px;
+}
+
+textarea {
+    font-family: 'Roboto', sans-serif;
+    width: 80%;
+    margin-bottom: 20px;
+    height: 100px;
+    border-radius: 5px;
+    outline: 0;
+    -moz-outline-style: none;
+    border: 1px solid #ccc;
+    padding: 10px 0 0 10px;
+    font-size: 14px;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.custom_upload {
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    display: inline-block;
+    margin-left: 6px;
+    padding: 6px 6px;
+    cursor: pointer;
 }
 
 #add_form .add_button {
@@ -83,6 +143,22 @@ input[type="number"] {
     height: 45px;
     border-radius: 5px;
     background: #60B963;
+    border: none;
+    color: white;
+    font-size: 14px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
+
+#add_form .deny_button {
+    width: 40%;
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    height: 45px;
+    border-radius: 5px;
+    background: #E45D65;
     border: none;
     color: white;
     font-size: 14px;
